--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-woo!
+<!doctype html>
+<html>
+<head>
+   <title>Jake Kuli</title>
+</head>
+<body style="font-family: Trebuchet MS;">
+   <div style="margin: 0;">
+      <h2>Jake Kuli</h2>
+      <hr>
+   </div>
+   <div style="font-size: 0.5em;">
+      I had to point this domain somewhere... so here it is.
+   </div>
+   <div id="content" style="margin-top: 32px;">
+      My most up-to-date resume can be found <a href="jake-kuli-resume.pdf">here.</a>
+      <br>
+      There might be a blog <a href="blog.html">here.</a>
+   </div>
+</body>
+</html>
