add vimrc and fix links

--- a/dotfiles/index.html
+++ b/dotfiles/index.html
@@ -15,7 +15,9 @@
          </div>
       </div>
       <div id="content" style="margin-top: 0.25em;">
-         <a href=".tmux.conf">.tmux.conf</a>
+         <a href="tmux.conf">tmux.conf</a>
+         <br>
+         <a href="vimrc">vimrc</a>
       </div>
       <div style="height: 1px; background-color:black; margin-top:0.25em; margin-bottom:0.25em;">
       </div>
