--- a/projects/index.html
+++ b/projects/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-   <title>Jake Kuli</title>
+   <title>Jake Kuli - Projects</title>
 </head>
 <body style="font-family: Trebuchet MS;">
    <div style="margin: 0;">
       <div style="font-size: 2em; margin-top:0.25em; margin-bottom:0.25em;">
-         JAKE KULI
+         Projects!
       </div>
       <div style="font-size: 0.75em; margin-top:0.25em; margin-bottom:0.25em;">
          I had to point this domain somewhere... so here it is.
@@ -15,15 +15,15 @@
       </div>
    </div>
    <div id="content" style="margin-top: 0.25em;">
-      My most up-to-date resume can be found <a href="jake-kuli-resume.pdf">here.</a>
-      <br>
-      There might be a blog <a href="blog">here.</a>
-      <br>
-      Some dotfiles are located <a href="dotfiles">here.</a>
-      <br>
-      My projects are located <a href="projects">here.</a>
+      <div>
+         <br>
+         <a href="mountains">Procedural Mountain Generator</a>
+      </div>
    </div>
    <div style="height: 1px; background-color:black; margin-top:0.25em; margin-bottom:0.25em;">
+   </div>
+   <div>
+      👈<a href="/">back</a>
    </div>
 </body>
 </html>
