add synthesis workshop project

--- a/projects/index.html
+++ b/projects/index.html
@@ -18,6 +18,8 @@
       <div>
          <br>
          <a href="mountains">Procedural Mountain Generator</a>
+         <br>
+         <a href="synthesis">Cal Poly Audio Engineering Society Synthesis Workshop</a>
       </div>
    </div>
    <div style="height: 1px; background-color:black; margin-top:0.25em; margin-bottom:0.25em;">
